// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a colored list of cards with heading and title 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "description": "Description 1",
        "title": "Heading 1",
      },
      Object {
        "description": "Description 2",
        "title": "Heading 2",
      },
      Object {
        "description": "Description 3",
        "title": "Heading 3",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginTop": 5,
      "width": "100%",
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "aliceblue",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 1
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.4)",
                    "fontSize": 15,
                    "fontWeight": "normal",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Description 1
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "aliceblue",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 2
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.4)",
                    "fontSize": 15,
                    "fontWeight": "normal",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Description 2
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "aliceblue",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 3
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.4)",
                    "fontSize": 15,
                    "fontWeight": "normal",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Description 3
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders a list of cards with heading 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "title": "Heading 1",
      },
      Object {
        "title": "Heading 2",
      },
      Object {
        "title": "Heading 3",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginTop": 5,
      "width": "100%",
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 1
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 2
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 3
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders a list of cards with heading and title 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "description": "Description 1",
        "title": "Heading 1",
      },
      Object {
        "description": "Description 2",
        "title": "Heading 2",
      },
      Object {
        "description": "Description 3",
        "title": "Heading 3",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "marginTop": 5,
      "width": "100%",
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 1
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.4)",
                    "fontSize": 15,
                    "fontWeight": "normal",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Description 1
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 2
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.4)",
                    "fontSize": 15,
                    "fontWeight": "normal",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Description 2
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "borderBottomColor": "rgba(33, 33, 33, 0.4)",
              "borderBottomWidth": 0.5,
              "borderTopColor": "rgba(33, 33, 33, 0.4)",
              "borderTopWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "opacity": 1,
              "paddingHorizontal": 5,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "flex": 3,
                "flexDirection": "column",
                "padding": 15,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.87)",
                    "fontSize": 17,
                    "fontWeight": "bold",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Heading 3
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "rgba(33, 33, 33, 0.4)",
                    "fontSize": 15,
                    "fontWeight": "normal",
                    "textAlign": "left",
                  },
                ]
              }
            >
              Description 3
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
